@@ -158,7 +158,7 @@ int ExecutiveAlign(PyMOLGlobals *G,char *s1,char *s2,char *mat_file,
                      int max_gap, int max_skip,
                      float cutoff,int cycles,int quiet,
                      char *oname,int state1,int state2,
-                     ExecutiveRMSInfo *rms_info);
+                     ExecutiveRMSInfo *rms_info,int transform,int reset);
 void ExecutiveUpdateColorDepends(PyMOLGlobals *G,ObjectMolecule *mol);
 void ExecutiveUpdateCoordDepends(PyMOLGlobals *G,ObjectMolecule *mol);
 float ExecutiveDistance(PyMOLGlobals *G,char *sele1,char *sele2);
