@@ -1471,12 +1471,13 @@ static PyObject *CmdAlign(PyObject *self, 	PyObject *args) {
   int quiet,cycles,max_skip;
   float cutoff,gap,extend;
   int state1,state2;
-  int max_gap;
+  int max_gap,transform,reset;
   ExecutiveRMSInfo rms_info;
 
-  ok = PyArg_ParseTuple(args,"ssfiffissiiii",&str2,&str3,
+  ok = PyArg_ParseTuple(args,"ssfiffissiiiiii",&str2,&str3,
                         &cutoff,&cycles,&gap,&extend,&max_gap,&oname,
-                        &mfile,&state1,&state2,&quiet,&max_skip);
+                        &mfile,&state1,&state2,&quiet,&max_skip,
+                        &transform,&reset);
 
   if(ok) {
     PRINTFD(TempPyMOLGlobals,FB_CCmd)
@@ -1492,7 +1493,7 @@ static PyObject *CmdAlign(PyObject *self, 	PyObject *args) {
                      mfile,gap,extend,max_gap,
                      max_skip,cutoff,
                      cycles,quiet,oname,state1,state2,
-                     &rms_info);
+                     &rms_info,transform,reset);
     } else 
       result = -1.0F;
     SelectorFreeTmp(TempPyMOLGlobals,s2);
