@@ -781,8 +781,9 @@ def align_to_object(s):
     for a in list:
         if a!=s:
             result.append([1,a,
-                                'cmd.align("polymer and name ca and ('+s+')",'+
-                                '"polymer and name ca and ('+a+')",max_gap=50,quiet=0)'])
+                           'cmd.align("polymer and name ca and ('+s+')",'+
+                           '"polymer and name ca and ('+a+')",max_gap=50,quiet=0,'+
+                           'object="aln_%s_to_%s",reset=1)'%(s,a)])
     return result
 
 def align_to_sele(s):
@@ -791,8 +792,9 @@ def align_to_sele(s):
     for a in list:
         if a!=s:
             result.append([1,a,
-                                'cmd.align("polymer and name ca and ('+s+')",'+
-                                '"polymer and name ca and ('+a+')",max_gap=50,quiet=0)'])
+                           'cmd.align("polymer and name ca and ('+s+')",'+
+                           '"polymer and name ca and ('+a+')",max_gap=50,quiet=0)'+
+                           'object="aln_%s_to_%s",reset=1)'%(s,a)])
     return result
 
 def mat_tran(s,direction=0):
